@@ -10,6 +10,11 @@
   * PLUS: add jaxb xml libs, which were removed from jdk9+, currently only
     needed by ViewManager extension, document extension and needed deps in
     readme.txt
+  * speedup SaveToPostGISPlugIn by delaying gui init
+      from
+      [INFO] 13:59:36.400 Loading Plugin [...].SaveToPostGISPlugIn took 0.43s 
+      to
+      [INFO] 14:00:26.666 Loading Plugin [...].SaveToPostGISPlugIn took 0.01s
 
 2018-12-22 Giuseppe Aruta.
    * Updated OpenKLEM to ver 20181222, correct some bugs
